--- a/index.html
+++ b/index.html
@@ -7,130 +7,136 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <div class="wrapper">
+  <div id = "wrapper" class ''>
 
     <div id = "employeeOverlay">
+      <a href="#" id = "close"><h1 id = "exit">X</h1></a>
       <img class = "largeImage" src = "http://via.placeholder.com/300x300" title="Employee's Photo"><br>
-      <ul class = "bigInfo">
-        <li class = "name bigName">Gary Lemacks</li><br>
-        <li class = "email bigEmail">gary@yahoo.com</li><br>
-        <li class = "city bigCity">Columbia</li><br>
-      </ul><br>
-      <ul id = "moreInfo">
-        <li id = "phone">803-603-9400</li>
-        <li id = "address">300 Hollingsworth Ln lexinton SC 29072</li>
-        <li id = "birthday">Birthday: 8/13/77</li>
-      </ul>
+      <a href="#"><h1 id = "right">></h1></a>
+      <a href="#"><h1 id = "left"><</h1></a>
+      <div class = "bigInfo">
+        <P id = "bigName"></p>
+        <p id = "bigEmail"></p>
+        <p id = "bigCity"></p>
+      </div><br>
+      <div id = "moreInfo">
+        <p id = "phone"></p>
+        <p id = "address"></p>
+        <p id = "birthday"></p>
+      </div>
     </div>
 
     <h3>AWESOME STARTUP EMPLOYEE DIRECTORY</h3>
 
+    <form id ="searchDiv" action="search" method="post">
+      <button type="button" id = "button">Search</button>
+    </form>
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
       <div class="employee">
         <img class = "image" src = "http://via.placeholder.com/200x200" alt="Employee's Photo">
-        <ul class = "info">
-         <li class = "name"></li><br>
-         <li class = "email"></li><br>
-         <li class = "city"></li>
-        </ul>
+        <aside class = "info">
+         <p class = "name"></p>
+         <p class = "email"></p>
+         <p class = "city"></p>
+       </aside>
       </div>
 
 
